--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
-body {
-    background-color: slategray;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+
+body {
+    height: 100vh;
+    font-family: sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #000;
+    /* background-color: slategray; */
+}
+
