--- a/styles.css
+++ b/styles.css
@@ -11,13 +11,18 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #000;
+    background-image: url(https://images.unsplash.com/photo-1638799692504-9b3c0093d54d?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    /* background: #000; */
     /* background-color: slategray; */
 }
 
 .heading {
     font-size: 10rem;
     font-weight: 900;
-    background: #000;
+    background: url(https://images.unsplash.com/photo-1593696954577-ab3d39317b97?q=80&w=1466&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-size: cover;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
 }
 
