--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,13 @@ body {
     color: transparent;
 }
 
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: darkslategray;
+    color: slategray;
+    text-align: center;
+}
