--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-
 body {
     height: 100vh;
-    font-family: sans-serif;
+    /* font-family: sans-serif; */
+
+    font-family: "Abril Fatface", serif;
+    font-weight: 400;
+    font-style: normal;
+
     display: flex;
     justify-content: center;
     align-items: center;
