--- a/styles.css
+++ b/styles.css
@@ -35,10 +35,11 @@ body {
 
 footer {
     position: fixed;
+    font-family: sans-serif;
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: darkslategray;
-    color: slategray;
+    background-color: lategray;
+    color: darksslategray;
     text-align: center;
 }
