--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap'); */
+
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wdth,wght@112.5,700&display=swap')
 
 * {
     margin: 0;
@@ -8,9 +10,18 @@
 
 body {
     height: 100vh;
-    font-family: "Abril Fatface", serif;
-    font-weight: 400;
+
+    font-family: "Fredoka", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
     font-style: normal;
+    font-variation-settings: "wdth" 112.5;
+
+
+    /* font-family: "Abril Fatface", serif;
+    font-weight: 400;
+    font-style: normal; */
+
     display: flex;
     justify-content: center;
     align-items: center;
