--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 
 body {
     height: 100vh;
-    
+
     /* font-family: "Abril Fatface", serif;
     font-weight: 400;
     font-style: normal; */
@@ -53,7 +53,7 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: lategray;
-    color: darksslategray;
+    background-color: slategray;
+    color: darkslategray;
     text-align: center;
 }
